[package]
name = "rust_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
sha2 = "0.10"
rand = "0.8"
